# libtrixi

./: CMakeLists.txt  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
LibTrixi.jl/: Project.toml
LibTrixi.jl/examples/: libelixir_t8code3d_euler_baroclinic_instability.jl  libelixir_t8code3d_euler_tracer.jl
LibTrixi.jl/test/: Project.toml
examples/: CMakeLists.txt
test/c/: CMakeLists.txt
test/fortran/: CMakeLists.txt
